line 그리기 시작

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <script src="./index.js"></script>
 
     <div id="root" class="content">
+    </div>
 
-        <script>
-            const memo = new ImageMemo("root");
-            console.log(memo.renderToolbar());
-        </script>
+    <script>
+        const memo = new ImageMemo("root");
+    </script>
 </body>
 
 </html>
