svg 태그 추가 및 텍스트 박스, 라인 그리기 추가

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <script src="./index.js"></script>
 
     <div id="root" class="content">
+        <!-- <svg id="mst" width="680" height="550" version="1.1" xmlns="http://www.w3.org/2000/svg">
+        <path style="stroke:blue; stroke-width: 3px;" d="M340 60 40 160" class="p1766555830963" data-nodes="B,A" data-value="7" id="fromB_toA_path"></path>
+        </svg> -->
     </div>
 
     <script>
