proxy 나눌.. proxy set 에서 함수 호출시 this 의 값을 가져올 수 없다..

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
 
   <body style="width: 100vw; height: 100vh">
+    <script src="./proxy.js"></script>
     <script src="./index.js"></script>
     <script src="./dummy.js"></script>
 
@@ -21,13 +22,12 @@
       const memo = new ImageMemo("root");
 
       console.log("memo", memo);
-      memo.setInfo("root");
       //   memo.render();
 
-      //   memo.setData({
-      //     MEMOS,
-      //     PATHS,
-      //   });
+      memo.setData({
+        MEMOS,
+        PATHS,
+      });
 
       // memo.add({
       //     MEMOS,
