shortcut 추가, module 로 분할, 현재 상태에 따른 스타일 변화

--- a/index.html
+++ b/index.html
@@ -2,32 +2,19 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./index.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="./index.css">
 </head>
 
 <body style="width: 100vw; height: 100vh;">
-    <script src="./index.js"></script>
-    <script src="./dummy.js"></script>
+  <script src="./main.js" type="module" defer></script>
+  <script src="./dummy.js"></script>
 
-    <div id="root" class="content">
-        <!-- <svg id="mst" width="680" height="550" version="1.1" xmlns="http://www.w3.org/2000/svg">
-        <path style="stroke:blue; stroke-width: 3px;" d="M340 60 40 160" class="p1766555830963" data-nodes="B,A" data-value="7" id="fromB_toA_path"></path>
-        </svg> -->
-    </div>
+  <div id="root" class="content">
+  </div>
 
-    <script>
-        const memo = new ImageMemo("root");
-        memo.setData({
-            MEMOS, PATHS
-        })
-        // memo.add({
-        //     MEMOS,
-        //     PATHS
-        // })
-    </script>
 </body>
 
 </html>
