--- a/index.html
+++ b/index.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="./index.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="./index.css">
-</head>
+  <body style="width: 100vw; height: 100vh">
+    <script src="./main.js" type="module" defer></script>
+    <script src="./dummy.js"></script>
 
-<body style="width: 100vw; height: 100vh;">
-  <script src="./main.js" type="module" defer></script>
-  <script src="./dummy.js"></script>
-
-  <div id="root" class="content">
-  </div>
-
-</body>
-
+    <div id="root" class="content"></div>
+  </body>
 </html>
